--- a/client/style.css
+++ b/client/style.css
@@ -69,7 +69,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #5436da;
+  background: #1a191e;
 
   display: flex;
   justify-content: center;
