--- a/client/style.css
+++ b/client/style.css
@@ -117,7 +117,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #56597d;
+  background: #e42f44;
 
   display: flex;
   flex-direction: row;
