--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@ body {
 #app {
   width: 100vw;
   height: 100vh;
-  background: #1f299a;
+  background: #1d2043;
 
   display: flex;
   flex-direction: column;
